Fixed row alignment/Added home page content

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,3 +9,12 @@
   background-image: url(home/test2.jpg);
   color:black;
 }
+
+#section3 { 
+  background-image: url(home/test.jpg);
+}
+
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
